raw/inflate-0.1.0--2016-11-09-12-29-18--5.log
commit bca365e688f0424fb99d38d477a9b7863bb070d3
Merge: 02aa428 a449bdb
Author: bors <bors@rust-lang.org>
Date:   Wed Nov 9 08:51:23 2016 -0800

    Auto merge of #36520 - estebank:dataless-enum, r=brson
    
    Reword error when data-less enum variant called as function
    
    Given a file like:
    
    ``` rust
    enum Test {
        Variant,
        Variant2 {a: u32},
    }
    
    fn main(){
        let x = Test::Variant("Hello");
        let y = Test::Variant2("World");
    }
    ```
    
    Both errors now look similar:
    
    ``` bash
    error[E0423]: `Test::Variant2` is the name of a struct or struct variant, but this expression uses it like a function name
      --> file3.rs:10:13
       |
    10 |     let y = Test::Variant2("Hello");
       |             ^^^^^^^^^^^^^^ struct called like a function
       |
       = help: did you mean to write: `Test::Variant2 { /* fields */ }`?
    
    error: `Test::Variant` is the name of a data-less enum, but this expression uses it like a function name
     --> file3.rs:9:13
      |
    9 |     let x = Test::Variant("World");
      |             ^^^^^^^^^^^^^^^^^^^^^^ data-less enum called like a function
      |
      = help: did you mean to write: `Test::Variant`?
    note: defined here
     --> file3.rs:2:5
      |
    2 |     Variant,
      |     ^^^^^^^
    
    error: aborting due to previous error
    ```
    
    Re: #28533
rustc: ./inflate-0.1.0
cargo rustc -- -Ztime-passes -Zinput-stats
   Compiling inflate v0.1.0 (file:///root/benchmarks/inflate-0.1.0)
time: 0.003; rss: 43MB	parsing
Lines of code:             956
Pre-expansion node count:  4740
time: 0.000; rss: 43MB	recursion limit
time: 0.000; rss: 43MB	crate injection
time: 0.000; rss: 43MB	plugin loading
time: 0.000; rss: 43MB	plugin registration
time: 0.058; rss: 72MB	expansion
time: 0.000; rss: 72MB	maybe building test harness
time: 0.000; rss: 72MB	maybe creating a macro crate
Post-expansion node count: 55750
time: 0.000; rss: 72MB	checking for inline asm in case the target doesn't support it
time: 0.000; rss: 72MB	complete gated feature checking
time: 0.002; rss: 72MB	early lint checks
time: 0.000; rss: 72MB	AST validation
time: 0.008; rss: 74MB	name resolution
time: 0.004; rss: 77MB	lowering ast -> hir
time: 0.001; rss: 79MB	indexing hir
time: 0.001; rss: 79MB	attribute checking
time: 0.000; rss: 74MB	language item collection
time: 0.000; rss: 74MB	lifetime resolution
time: 0.000; rss: 74MB	looking for entry point
time: 0.000; rss: 74MB	looking for plugin registrar
time: 0.003; rss: 75MB	region resolution
time: 0.000; rss: 75MB	loop checking
time: 0.000; rss: 75MB	static item recursion checking
time: 0.019; rss: 75MB	compute_incremental_hashes_map
time: 0.000; rss: 75MB	load_dep_graph
time: 0.001; rss: 77MB	type collecting
time: 0.000; rss: 77MB	variance inference
time: 0.008; rss: 78MB	coherence checking
time: 0.001; rss: 78MB	wf checking
time: 0.001; rss: 78MB	item-types checking
time: 1.701; rss: 92MB	item-bodies checking
time: 0.000; rss: 92MB	drop-impl checking
time: 0.016; rss: 91MB	const checking
time: 0.001; rss: 91MB	privacy checking
time: 0.000; rss: 91MB	stability index
time: 0.000; rss: 91MB	intrinsic checking
time: 0.000; rss: 91MB	effect checking
time: 0.002; rss: 91MB	match checking
time: 0.066; rss: 89MB	liveness checking
time: 0.012; rss: 89MB	rvalue checking
time: 0.039; rss: 113MB	MIR dump
  time: 0.007; rss: 111MB	SimplifyCfg
  time: 0.005; rss: 111MB	QualifyAndPromoteConstants
  time: 0.006; rss: 111MB	TypeckMir
  time: 0.000; rss: 111MB	SimplifyBranches
  time: 0.002; rss: 111MB	SimplifyCfg
time: 0.021; rss: 111MB	MIR cleanup and validation
time: 0.207; rss: 109MB	borrow checking
time: 0.000; rss: 109MB	reachability checking
time: 0.003; rss: 109MB	death checking
time: 0.002; rss: 109MB	stability checking
time: 0.000; rss: 109MB	unused lib feature checking
time: 0.017; rss: 112MB	lint checking
time: 0.000; rss: 112MB	resolving dependency formats
  time: 0.000; rss: 112MB	NoLandingPads
  time: 0.002; rss: 112MB	SimplifyCfg
  time: 0.003; rss: 112MB	EraseRegions
  time: 0.001; rss: 113MB	AddCallGuards
  time: 0.198; rss: 115MB	ElaborateDrops
  time: 0.000; rss: 115MB	NoLandingPads
  time: 0.006; rss: 113MB	SimplifyCfg
  time: 0.003; rss: 113MB	InstCombine
  time: 0.000; rss: 113MB	Deaggregator
  time: 0.000; rss: 113MB	CopyPropagation
  time: 0.003; rss: 113MB	SimplifyLocals
  time: 0.001; rss: 113MB	AddCallGuards
  time: 0.000; rss: 113MB	PreTrans
time: 0.216; rss: 113MB	MIR optimisations
  time: 0.001; rss: 114MB	write metadata
  time: 0.009; rss: 114MB	translation item collection
  time: 0.001; rss: 114MB	codegen unit partitioning
  time: 0.001; rss: 127MB	internalize symbols
time: 0.156; rss: 127MB	translation
time: 0.000; rss: 127MB	assert dep graph
time: 0.000; rss: 127MB	serialize dep graph
  time: 0.028; rss: 88MB	llvm function passes [0]
  time: 0.005; rss: 89MB	llvm module passes [0]
  time: 0.660; rss: 96MB	codegen passes [0]
  time: 0.000; rss: 96MB	codegen passes [0]
time: 0.729; rss: 96MB	LLVM passes
time: 0.000; rss: 96MB	serialize work products
time: 0.019; rss: 81MB	linking
done
